--- a/.gitmodules
+++ b/.gitmodules
@@ -8,3 +8,6 @@
 [submodule "3rdParty/glm"]
 	path = 3rdParty/glm
 	url = https://github.com/g-truc/glm
+[submodule "3rdParty/box2d_cmake/Box2D"]
+	path = 3rdParty/box2d_cmake/Box2D
+	url = https://github.com/erincatto/Box2D
