--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.2 FATAL_ERROR)
 set (CMAKE_CXX_STANDARD 17)
 
 project (tinygame VERSION 0.1 LANGUAGES CXX)
-set(CMAKE_C_FLAGS_DEBUG "-DDEBUG")
+# set(CMAKE_C_FLAGS_DEBUG "-DDEBUG")
 
 set ( TINYGAME_ROOT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} )
 set ( GAME_DATA_DIR ${CMAKE_CURRENT_SOURCE_DIR}/gamedata )
@@ -15,10 +15,17 @@ set_property(GLOBAL PROPERTY USE_FOLDERS ON)
         set (GLFW_ROOT ${THIRDPARTY_DIR}/glfw)
         set (GLFW_STATIC true)
         set (GLFW_VULKAN_STATIC off)
-        set (GLFW_INCLUDE_DIR ${THIRDPARTY_DIR}/include)
+        set (GLFW_INCLUDE_DIR ${THIRDPARTY_DIR}/glfw/include)
 
         add_subdirectory(${GLFW_ROOT})
     # End GLFW
+
+    # SDL2
+        set (SDL2_ROOT ${THIRDPARTY_DIR}/SDL-mirror)
+        set (SDL2_INCLUDE_DIR ${SDL2_ROOT}/include)
+        
+        add_subdirectory(${SDL2_ROOT})
+    # End SDL2
     
     # STB
         set (STB_INCLUDE_DIR ${THIRDPARTY_DIR}/stb)
@@ -28,15 +35,26 @@ set_property(GLOBAL PROPERTY USE_FOLDERS ON)
         set (GLM_INCLUDE_DIR ${THIRDPARTY_DIR}/glm)
     # End GLM
 
-    # Chipmunk2D
+    # Box2D
         set (BOX2D_ROOT_DIR ${THIRDPARTY_DIR}/box2d_cmake)
         set (BOX2D_INCLUDE_DIR ${BOX2D_ROOT_DIR}/Box2D)
-        set(BUILD_DEMOS OFF)
-        set(INSTALL_DEMOS OFF)
-        set(BUILD_SHARED OFF)
-        set(BUILD_STATIC ON)
+        set (BUILD_DEMOS OFF)
+        set (INSTALL_DEMOS OFF)
+        set (BUILD_SHARED OFF)
+        set (BUILD_STATIC ON)
         add_subdirectory(${BOX2D_ROOT_DIR})
-    # End Chipmunk2D
+    # End Box2D
+
+    # BGFX
+        set (BGFX_ROOT_DIR ${THIRDPARTY_DIR}/bgfx.cmake)
+        set (BGFX_INCLUDE_DIR ${BGFX_ROOT_DIR}/bgfx/include)
+        set (BGFX_THIRD_PARTY_DIR ${BGFX_ROOT_DIR}/bgfx/3rdparty)
+        set (BX_INCLUDE_DIR ${BGFX_ROOT_DIR}/bx/include)
+        set (BGFX_BUILD_EXAMPLES OFF)
+        set (BGFX_INSTALL OFF)
+        set (BGFX_INSTALL_EXAMPLES OFF)
+        add_subdirectory(${BGFX_ROOT_DIR})
+    # End BGFX
 
     set( CEREAL_INCLUDE_DIR ${THIRDPARTY_DIR}/cereal/include )# End 3rdParty
 
